Fix destructive color in dark mode

--- a/apps/web/src/css/global/index.scss
+++ b/apps/web/src/css/global/index.scss
@@ -63,7 +63,7 @@
     --muted-foreground: 240 5% 64.9%;
     --accent: 21 79% 63%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 86.8% 59.6%;
     --destructive-foreground: 0 0% 98%;
     --error: 0 84.2% 60.2%;
     --error-foreground: 0 0% 98%;
